# hfict-gui

./: .gitignore
Pruefung/Pruefung_1/MainWindow/MainWindow/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.pro
Pruefung/Pruefung_1/WidgetOnly/Pruefung1/: CMakeLists.txt  MainWidget.cpp  Pruefung1.pro
Pruefung2/: 2019_04_13_Klausur_2_GUI.pro  Animation.cpp  Animation.h  BallonfahrtSimulator.cpp  BallonfahrtSimulator.h  CMakeLists.txt  Canvas.cpp  Canvas.h  main.cpp
QT-MainWindow-Template/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h
Uebung/Diplomvorbereitung1/: CMakeLists.txt  main.cpp
Uebung/Media/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  Media.pro  mainwindow.cpp  mainwindow.h
Uebung/PWGenerator/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  PWGenerator.pro  mainwindow.cpp  mainwindow.h
Uebung/PaintAndThread/: Animation.cpp  Animation.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Painting.cpp  Painting.h
Unterricht/W0/ErstesWidget/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
Unterricht/W0/ZweitesWidgets/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Widget.cpp  Widget.h  main.cpp
Unterricht/W1/: CMakeLists.txt  Controller.cpp  Controller.h  CreditCardChecker.pro  Store.cpp  Store.h  creditcard.cpp  creditcard.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h
Unterricht/W10/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  MainWindow.cpp  WorkerThread.cpp  WorkerThread.h
Unterricht/W2/: CMakeLists.txt  Controller.cpp  Controller.h  Store.cpp  Store.h  main.cpp  mainwidget.cpp  mainwidget.h
Unterricht/W4/W4/: W4.pro  mainwidget.cpp  mainwidget.h
Unterricht/W8/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Mandelbrot.cpp  Mandelbrot.h  Palette.cpp  Palette.h  main.cpp
Unterricht/W9/: AnimatedEngine.pro  Animation.cpp  Animation.h  CMakeLists.txt  Engine.cpp  Engine.h  MainWindow.cpp  MainWindow.h  main.cpp
